# python-project-83

./: .env-my  .gitignore  Makefile  README.md  alembic.ini  build.sh  database.sql  pyproject.toml  setup.cfg
.github/workflows/: all_test.yml
page_analyzer/: app.py  db.py  parser.py  url.py
page_analyzer/migration/: env.py
page_analyzer/migration/versions/: bd0313f0a534_first.py
page_analyzer/migrations/: env.py
page_analyzer/models/: basemodel.py  urls.py  urls_checks.py
page_analyzer/templates/: base.html  header.html  index.html  url.html  urls.html
page_analyzer/templates/errors/: 404.html
tests/: conftest.py  first_test.py  tests.py
