[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["FooXeeD <fooxeed@mail.ru>"]
readme = "README.md"
repository = "https://github.com/FooXeeD/python-project-83"


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pytest = "^7.2.1"
gunicorn = "^20.1.0"
flask = "^3.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

